--- a/sample/res/layout/activity_ptr_grid.xml
+++ b/sample/res/layout/activity_ptr_grid.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
-<!-- The PullToRefreshGridView replaces a standard GridView widget. -->
-    <com.handmark.pulltorefresh.library.PullToRefreshGridView
-        xmlns:ptr="http://schemas.android.com/apk/res-auto"
+    <!-- The PullToRefreshGridView replaces a standard GridView widget. -->
+    <com.handmark.pulltorefresh.library.PullToRefreshGridView xmlns:ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pull_refresh_grid"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
