--- a/sample/res/layout/activity_ptr_horizontalscrollview.xml
+++ b/sample/res/layout/activity_ptr_horizontalscrollview.xml
@@ -2,22 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <!-- The PullToRefreshScrollView replaces a standard PullToRefreshScrollView widget. -->
 
-    <com.handmark.pulltorefresh.library.PullToRefreshHorizontalScrollView
-        xmlns:ptr="http://schemas.android.com/apk/res-auto"
+    <com.handmark.pulltorefresh.library.PullToRefreshHorizontalScrollView xmlns:ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pull_refresh_horizontalscrollview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         ptr:ptrAnimationStyle="flip"
-        ptr:ptrMode="both" >
+        ptr:ptrMode="both">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 style="@style/HorizScrollViewItem"
@@ -61,7 +60,7 @@
                 android:layout_height="fill_parent"
                 android:background="#ff669900" />
         </LinearLayout>
-        
+
     </com.handmark.pulltorefresh.library.PullToRefreshHorizontalScrollView>
 
 </LinearLayout>
